문해테스트 UI 수정

--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -147,8 +147,8 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aMS-ae-pPb">
-                                                <rect key="frame" x="0.0" y="289" width="414" height="547"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <rect key="frame" x="0.0" y="297" width="414" height="511"/>
+                                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gmN-oA-c0A">
                                                     <size key="itemSize" width="128" height="128"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -168,40 +168,52 @@
                                                 </cells>
                                             </collectionView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f15-3F-O4E">
-                                                <rect key="frame" x="0.0" y="836" width="414" height="60"/>
+                                                <rect key="frame" x="0.0" y="808" width="414" height="80"/>
                                                 <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문해력 테스트" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bN9-1c-eFV">
+                                                        <rect key="frame" x="24" y="0.0" width="93" height="21"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="21" id="6Hi-cS-smW"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8uS-eW-F24">
-                                                        <rect key="frame" x="24" y="2" width="366" height="56"/>
+                                                        <rect key="frame" x="44" y="29" width="326" height="49"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                        <state key="normal" title="문해력테스트"/>
+                                                        <state key="normal" title="문해력을 테스트 하자!"/>
                                                         <connections>
                                                             <action selector="clickedmunhaeTest:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y72-DP-rdX"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="E88-Dg-thE"/>
+                                                    <constraint firstItem="bN9-1c-eFV" firstAttribute="leading" secondItem="f15-3F-O4E" secondAttribute="leading" constant="24" id="ClG-T8-fom"/>
+                                                    <constraint firstItem="bN9-1c-eFV" firstAttribute="top" secondItem="f15-3F-O4E" secondAttribute="top" id="TzZ-oc-7hZ"/>
                                                     <constraint firstAttribute="bottom" secondItem="8uS-eW-F24" secondAttribute="bottom" constant="2" id="hsN-Lj-xGt"/>
-                                                    <constraint firstItem="8uS-eW-F24" firstAttribute="leading" secondItem="f15-3F-O4E" secondAttribute="leading" constant="24" id="lp3-RB-kHe"/>
-                                                    <constraint firstItem="8uS-eW-F24" firstAttribute="top" secondItem="f15-3F-O4E" secondAttribute="top" constant="2" id="mUa-zx-h3X"/>
-                                                    <constraint firstAttribute="trailing" secondItem="8uS-eW-F24" secondAttribute="trailing" constant="24" id="z7d-bW-Zlz"/>
+                                                    <constraint firstItem="8uS-eW-F24" firstAttribute="top" secondItem="bN9-1c-eFV" secondAttribute="bottom" constant="8" id="kLj-S0-g8o"/>
+                                                    <constraint firstItem="8uS-eW-F24" firstAttribute="leading" secondItem="f15-3F-O4E" secondAttribute="leading" constant="44" id="lp3-RB-kHe"/>
+                                                    <constraint firstAttribute="height" constant="80" id="qgj-oU-wmj"/>
+                                                    <constraint firstAttribute="trailing" secondItem="8uS-eW-F24" secondAttribute="trailing" constant="44" id="z7d-bW-Zlz"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="827-5Z-GQf" firstAttribute="leading" secondItem="SSb-fy-LvT" secondAttribute="leading" constant="24" id="2IG-du-Uum"/>
                                             <constraint firstAttribute="trailing" secondItem="827-5Z-GQf" secondAttribute="trailing" constant="24" id="GDb-0w-fiN"/>
                                             <constraint firstAttribute="trailing" secondItem="Wqz-Vc-piG" secondAttribute="trailing" id="NdI-X2-hhC"/>
-                                            <constraint firstItem="aMS-ae-pPb" firstAttribute="top" secondItem="tiR-nm-Nhm" secondAttribute="bottom" id="Nma-wE-7aC"/>
+                                            <constraint firstItem="aMS-ae-pPb" firstAttribute="top" secondItem="tiR-nm-Nhm" secondAttribute="bottom" constant="8" id="Nma-wE-7aC"/>
                                             <constraint firstAttribute="trailing" secondItem="f15-3F-O4E" secondAttribute="trailing" id="RYc-Xx-4pO"/>
                                             <constraint firstItem="aMS-ae-pPb" firstAttribute="leading" secondItem="SSb-fy-LvT" secondAttribute="leading" id="ncV-DM-xq6"/>
                                             <constraint firstItem="Wqz-Vc-piG" firstAttribute="leading" secondItem="SSb-fy-LvT" secondAttribute="leading" id="nes-25-JXx"/>
                                             <constraint firstItem="Wqz-Vc-piG" firstAttribute="top" secondItem="SSb-fy-LvT" secondAttribute="top" id="ouH-wE-cTb"/>
                                             <constraint firstItem="tiR-nm-Nhm" firstAttribute="leading" secondItem="SSb-fy-LvT" secondAttribute="leading" constant="20" id="ouZ-pk-S1b"/>
                                             <constraint firstItem="f15-3F-O4E" firstAttribute="leading" secondItem="SSb-fy-LvT" secondAttribute="leading" id="rhG-zg-qAF"/>
-                                            <constraint firstAttribute="bottom" secondItem="f15-3F-O4E" secondAttribute="bottom" id="sCz-aw-oc0"/>
+                                            <constraint firstAttribute="bottom" secondItem="f15-3F-O4E" secondAttribute="bottom" constant="8" id="sCz-aw-oc0"/>
                                             <constraint firstItem="827-5Z-GQf" firstAttribute="top" secondItem="Wqz-Vc-piG" secondAttribute="bottom" id="tIb-8R-qgm"/>
                                             <constraint firstAttribute="trailing" secondItem="aMS-ae-pPb" secondAttribute="trailing" id="tqj-PY-skq"/>
                                             <constraint firstItem="827-5Z-GQf" firstAttribute="bottom" secondItem="tiR-nm-Nhm" secondAttribute="top" constant="12" id="wyu-c0-7Kv"/>
